fix: audit - charset UTF-8, CORS, RBAC, delegation service, user enumeration, Feign JWT scope